    - system/resolver:
      - [API break] SuggestedPackage: new field 'automaticallyInstalledFlag',
        removed old field 'manuallySelected'.
      - New method 'setAutomaticallyInstalledFlag'.
      - 'SuggestedPackage': new field 'reasonPackageNames'.
      - [API break] 'unsatisfyRelationExpression': removed, merged into
        'satisfyRelationExpression' with new boolean parameter.
    - system/worker:
      - [API break] 'setPackagePurgeFlag': now is persistent, and should be
        called before 'setDesiredState'.
      - [ABI break] 'Action::Type' new enum value 'Reinstall'.
      - 'updateReleaseAndIndexData': use threads instead of forking.
      - 'updateReleaseAndIndexData': initial support for InRelease files.
        (Closes: #623113)
    - cache/binarypackage:
      - 'getInstalledVersion': significant speed-up.
      - New methods begin() and end().
    - cache/binaryversion:
      - [API break] Fields 'shortDescription' and 'longDescription' are
        replaced with a new field 'description'.
      - [API break] 'parseFromFile': removed.
    - cache/sourceversion:
      - [API break] 'parseFromFile': removed.
    - cache/sourcepackage:
      - New methods begin() and end().
      - Stopped filtering out packages with unapplicable binary architectures.
    - file:
      - [API break] Not a public API anymore.
    - system/state:
      - New method 'getArchitecture'.
    - download/manager:
      - Removed 'alive pings'.
      - Notify the download progress of download sizes earlier. This improves
        the total percent accuracy where a grand total size is not known
        beforehand (for example, metadata updates).
      - [ABI break] 'DownloadEntity': new member 'optional'.
    - download/method{,factory}:
      - [API break]: don't require shared_ptr< Config > anymore.
    - download/progress:
      - Added support for the dynamic changes of expected download sizes.