@@ -43,7 +43,7 @@ class CUPT_API NativeResolver: public Resolver
 	NativeResolver(const shared_ptr< const Config >&, const shared_ptr< const Cache >&);
 
 	void installVersion(const BinaryVersion*);
-	void satisfyRelationExpression(const RelationExpression&, bool);
+	void satisfyRelationExpression(const RelationExpression&, bool, const string&);
 	void removePackage(const string& packageName);
 	void upgrade();
 	void setAutomaticallyInstalledFlag(const string&, bool);
