@@ -37,9 +37,10 @@ void NativeResolver::installVersion(const BinaryVersion* version)
 	__impl->installVersion(version);
 }
 
-void NativeResolver::satisfyRelationExpression(const RelationExpression& relationExpression, bool invert)
+void NativeResolver::satisfyRelationExpression(const RelationExpression& relationExpression,
+		bool invert, const string& annotation)
 {
-	__impl->satisfyRelationExpression(relationExpression, invert);
+	__impl->satisfyRelationExpression(relationExpression, invert, annotation);
 }
 
 void NativeResolver::removePackage(const string& packageName)
